mule-user-guide/v/3.5/xquery-support.adoc
=  XQuery支持

XQuery模块使用户能够在Mule中对XML消息执行XQuery转换。这与Mule附带的 link:/mule-user-guide/v/3.5/xslt-transformer-reference[XSLT变压器]非常类似。

Mule 3.6.0及更高版本包含对{X}转换器的 link:http://www.w3.org/TR/xquery-30/[XQuery 3.0]支持。转换器的行为和语法保持不变，您可以声明XQuery脚本本身使用的版本（参见下文）。

如果您转换为Mule 3.6及更高版本，则可以在 link:/mule-user-guide/v/3.8/xpath[XPath3]指南中找到有关XML的更多信息。

== 声明XQuery版本

如果未声明XQuery版本，则转换器默认为1.0版。 3.0版是向后兼容的，根据规范，1.0中的所有查询在3.0中都是有效的，并且必须返回相同的结果。

要选择要使用的XQuery版本，可以将其包含在XQuery脚本中，如下所示：

[source, xml, linenums]
----
...
<mxml:xquery‐text>
<![CDATA[
  xquery version "3.0";
...
----

XQuery 3.0引入了对XQuery转换器中几项新功能的支持，例如使用XQuery脚本一次对多个文档进行操作。有关更多信息，请参阅下面的<<XQuery 3.0>>。

== 配置

要使用XQuery转换器，你需要将它添加到你的Mule Xml配置中

[source, xml, linenums]
----
<mxml:xquery-transformer name="xquery">
        <mxml:xquery-text>
           <![CDATA[
                declare variable $document external;
                declare variable $title external;
                declare variable $rating external;
 
                <cd-listings title='{$title}' rating='{$rating}'> {
                    for $cd in $document/catalog/cd
                    return <cd-title>{data($cd/title)}</cd-title>
                } </cd-listings>
            ]]>
        </mxml:xquery-text>
         
        <mxml:context-property key="title" value="#[mule.message:header('ListingTitle')]"/>
        <mxml:context-property key="rating" value="#[mule.message:header('ListingRating')]"/>
 
    </mxml:xquery-transformer>
----

在这里，我们使用内联XQuery表达式来配​​置转换器。

我们还定义了两个`<context-property>`元素：

[source, xml, linenums]
----
<mxml:context-property key="title" value="#[mule.message:header('ListingTitle')]"/>
<mxml:context-property key="rating" value="#[mule.message:header('ListingRating')]"/>
----

这些属性从当前消息中提取并在XQuery上下文中可用，以便它们可以在XQuery语句中引用。这些可以是对象引用，也可以使用Mule表达式从当前消息中获取信息。

== 示例

现在，您配置的XQuery转换器可以被端点引用。在以下示例中，您可以将XML文件拖放到本地计算机的目录中（请参阅入站文件端点），并将结果写入`System.out`。

测试数据如下所示：

[source, xml, linenums]
----
<catalog>
    <cd>
        <title>Empire Burlesque</title>
        <artist>Bob Dylan</artist>
        <country>USA</country>
        <company>Columbia</company>
        <price>10.90</price>
        <year>1985</year>
    </cd>
    <cd>
        <title>Hide your heart</title>
        <artist>Bonnie Tyler</artist>
        <country>UK</country>
        <company>CBS Records</company>
        <price>9.90</price>
        <year>1988</year>
    </cd>
     ...
</catalog>
----

写入`System.out`的结果如下所示：

[source, xml, linenums]
----
<cd-listings title="MyList" rating="6">
    <cd-title>Empire Burlesque</cd-title>
    <cd-title>Hide your heart</cd-title>
     ...
</cd-listings>
----

这个例子的完整配置如下所示：

[source, xml, linenums]
----
<mule xmlns="http://www.mulesource.org/schema/mule/core"
      xmlns:mxml="http://www.mulesource.org/schema/mule/xml"
      xmlns:vm="http://www.mulesource.org/schema/mule/vm"
      xmlns:stdio="http://www.mulesource.org/schema/mule/stdio"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="
      http://www.mulesource.org/schema/mule/stdio http://www.mulesource.org/schema/mule/stdio/3.6/mule-stdio.xsd
      http://www.mulesource.org/schema/mule/vm http://www.mulesource.org/schema/mule/vm/3.6/mule-vm.xsd
      http://www.mulesource.org/schema/mule/xml http://www.mulesource.org/schema/mule/xml/3.6/mule-xml.xsd
       http://www.mulesource.org/schema/mule/core http://www.mulesource.org/schema/mule/core/3.6/mule.xsd">
 
    <mxml:xquery-transformer name="xquery">
        <mxml:xquery-text>
           <![CDATA[
                declare variable $document external;
                declare variable $title external;
                declare variable $rating external;
 
                <cd-listings title='{$title}' rating='{$rating}'> {
                    for $cd in $document/catalog/cd
                    return <cd-title>{data($cd/title)}</cd-title>
                } </cd-listings>
            ]]>
        </mxml:xquery-text>
         
        <mxml:context-property key="title" value="#[mule.message:header('ListingTitle')]"/>
        <mxml:context-property key="rating" value="#[mule.message:header('ListingRating')]"/>
 
    </mxml:xquery-transformer>
 
<flow name="testingFlow1" doc:name="testingFlow1">
        <vm:inbound-endpoint exchange-pattern="one-way" path="test.in" transformer-refs="xquery"/>
        <echo-component/>
        <all>
            <processor-chain>
                <vm:outbound-endpoint exchange-pattern="one-way"/>
            </processor-chain>
            <processor-chain>
                <outbound-endpoint doc:name="Generic"/>
            </processor-chain>
        </all>
    </flow>
 
</mule>
----

=== 测试XQuery

这可以使用以下功能测试进行测试。

[source, java, linenums]
----
public class XQueryFunctionalTestCase extends FunctionalTestCase
{
    protected String getConfigResources()
    {
        //Our Mule configuration file
        return "org/mule/test/integration/xml/xquery-functional-test.xml";
    }
 
    public void testMessageTransform() throws Exception
    {
        //We're using Xml Unit to compare results
        //Ignore whitespace and comments
        XMLUnit.setIgnoreWhitespace(true);
        XMLUnit.setIgnoreComments(true);
 
        //Read in src and result data
        String srcData = IOUtils.getResourceAsString("cd-catalog.xml", getClass());
        String resultData = IOUtils.getResourceAsString("cd-catalog-result-with-params.xml", getClass());
 
        //Create a new Mule Client
        MuleClient client = new MuleClient();
 
        //These are the message properties that pass into the XQuery context
        Map props = new HashMap();
        props.put("ListTitle", "MyList");
        props.put("ListRating", new Integer(6));
 
        //Invoke the flow
        MuleMessage message = client.send("vm://test.in", srcData, props);
        assertNotNull(message);
        assertNull(message.getExceptionPayload());
        //Compare results
        assertTrue(XMLUnit.compareXML(message.getPayloadAsString(), resultData).similar());
    }
}
----

==  XQuery 3.0

Mule 3.6.0引入了对XQuery 3.0的支持。 XQuery转换器的行为和语法保持不变，您可以声明XQuery脚本本身使用的版本（参见上文）。

对3.0版的支持引入了一些新功能和改进，这些将在以下各节中进行介绍。

=== 在多个输入上运行

Mule 3.6.0引入了对传递DOM文档和节点（`org.w3c.dom.Document`或`org.w3c.dom.Node`）的支持。以下简单查询需要两个XML文件（一个列表城市，其他列表书籍）并将书名与城市名称混合。 `$cities`和`$books`变量作为上下文属性传递。

[source, xml, linenums]
----
<mxml:xquery‐transformer>
<mxml:context‐property key="books" value="#[flowVars['books']]" />
<mxml:context‐property key="cities" value="#[flowVars['cities']]" />
<mxml:xquery‐text>
<![CDATA[
    xquery version "3.0";
    declare variable $document external;
    declare variable $cities external;
    declare variable $books external;
    <mixes>
    {
        for $b in $books/BOOKLIST/BOOKS/ITEM,
            $c in $cities/cities/city
                return <mix title="{$b/TITLE/text()}" city="{$c/@name}" />
    }
    </mixes>
]]>
  </mxml:xquery‐text>
</mxml:xquery‐transformer>
----

XQuery 3.0的另一个可能性是为实际的XML文档提供路径，在这种情况下引擎自己生成文档。在这种情况下，流变量只包含磁盘上XML文档的路径，并且查询中的`fn:doc`函数执行解析。

[source, xml, linenums]
----
<mxml:xquery‐transformer>
    <mxml:context‐property key="books" value="#[flowVars['books']]" />
    <mxml:context‐property key="cities" value="#[flowVars['cities']]" />
    <mxml:xquery‐text>
    <![CDATA[
        xquery version "3.0";
        declare variable $document external;
        declare variable $cities external;
        declare variable $books external;
        <mixes>
        {
            for $b in fn:doc($books)/BOOKLIST/BOOKS/ITEM,
                $c in fn:doc($cities)/cities/city
                return <mix title="{$b/TITLE/text()}" city="{$c/@name}" />
        }
        </mixes>
    ]]>
  </mxml:xquery‐text>
</mxml:xquery‐transformer>
----

===  `try` ... `Catch`块

您现在可以在XQuery语句中使用`try ... Catch`块。这个简单的例子显示了一个总是失败并始终返回一个错误标签的脚本。

[source, xml, linenums]
----
<mxml:xquery‐transformer>
    <mxml:xquery‐text>
        <![CDATA[
            xquery version "3.0";
            declare variable $document external;
            let $x := "Hello"
            return
                try {
                    $x cast as xs:integer
                } catch * {
                    <error>Caught error {$err:code}: {$err:description}</error>
                }
        ]]>
  </mxml:xquery‐text>
</mxml:xquery‐transformer
----

=== 切换语句

现在支持切换块。以下示例始终返回`<Paris />`。

[source, xml, linenums]
----
<mxml:xquery‐transformer>
<mxml:xquery‐text>
    <![CDATA[
      xquery version "3.0";
      let $animal := "France"
      return
        switch ($animal)
          case "Germany" return "Berlin"
          case "Spain" return "Madrid"
          case "France" return "Paris"
          case "England" case "UK" return "London"
          default return "What's the capital?"
    ]]>
  </mxml:xquery‐text>
</mxml:xquery‐transformer
----

=== 分组依据

XQuery 3.0还引入了`group by`子句，如下所示：

[source, xml, linenums]
----
<mxml:xquery‐transformer>
    <mxml:xquery‐text>
        <![CDATA[
            xquery version "3.0";
            declare variable $document external;
            for $n in 1 to 10
                group by $mod := $n mod 2
                return
                    if ($mod = 0) then
                        <even>{$n}</even>
                    else
                        <odd>{$n}</odd>
        ]]>
    </mxml:xquery‐text>
</mxml:xquery‐transformer>
----

以上脚本返回以下内容：

[source, xml, linenums]
----
<odd>13579</odd>
<even>246810</even>
----

=== 返回类型改进

在Mule 3.6.0之前，XQuery变换器返回的结果有几个缺点：

* 默认情况下，转换器只返回第一个结果（除非将`returnClass`属性设置为数组）
* 如果用户指定了返回值但未找到结果，则变换器返回`NullPayload`
* 如果只找到一个结果，则变换器返回该元素，即使它被配置为返回一个数组

从Mule 3.6.0开始，默认行为已经改变：

* 默认情况下，转换器返回一个Java列表
* 列表包含所有结果，即使只找到一个结果
* 如果找不到结果，则列表为空

如果您指定了一个返回类，那么变换器将回退到旧的行为（数组，一个元素或null）。 +
